@@ -2,3 +2,4 @@
 #### CHANGES W.R.T. VERSION 0.3 ####
 ####################################
 - In include/lru_cache.h, lru_pos.cost is renamed in lru_pos.price
+- In lru_cache.lru and lru_cache.mru have been renamed into lru_cache.lru_ and lru_cache.mru_
